blurb update and spacing fix

--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -230,7 +230,8 @@ body {
     }
 
     > * {
-      max-width: 38rem;
+      //max-width: 45rem;
+      max-width: $large-breakpoint;
       padding: 0;
     }
   }
