--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -31,8 +31,7 @@ $heading-spacing: 0.5rem !default;
 $section-spacing: 2rem !default;
 $sidebar-width: 18rem !default;
 
-$large-breakpoint: 49rem !default;
-$larger-breakpoint: 80rem !default;
+$large-breakpoint: 45rem !default;
 $large-font-size: 1.25rem !default;
 
 $box-shadow-size: 1px !default;
